# Notaris

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
.tmp/: project-premise.md
docs/: architecture.md
src/notaris/: __init__.py  __main__.py
src/notaris/domain/: __init__.py  models.py  parsing.py
src/notaris/providers/: __init__.py  base.py  factory.py  google.py  llm.py  mock.py  ollama.py
src/notaris/services/: __init__.py  export.py  extraction.py
src/notaris/static/: style.css
src/notaris/templates/: _provider_selector.html  base.html  batch_input.html  batch_input_review.html  extraction_error.html  extraction_results.html  index.html  provider_settings.html  schema_builder.html  schema_success.html
src/notaris/web/: app.py  routes.py
tests/: test_batch_input_routes.py  test_domain_models.py  test_export_routes.py  test_export_service.py  test_extraction_routes.py  test_extraction_service.py  test_google_provider.py  test_health.py  test_home.py  test_llm_common.py  test_main.py  test_mock_coverage.py  test_ollama_coverage.py  test_parsing.py  test_provider_factory.py  test_provider_routes.py  test_providers.py  test_schema_routes.py
